--- a/src/locales/ar.json
+++ b/src/locales/ar.json
@@ -208,6 +208,10 @@
       "fortuneTypes": {
         "coffee": "توقعات القهوة",
         "palm": "قراءة الكف"
+      },
+      "header": {
+        "title": "قم بتحميل صورتك لقراءة سريعة",
+        "subtitle": "ضاعف متعة القهوة الخاصة بك"
       }
       
       
