--- a/src/locales/gr.json
+++ b/src/locales/gr.json
@@ -208,6 +208,10 @@
       "fortuneTypes": {
         "coffee": "Μαντεία Καφέ",
         "palm": "Ανάγνωση Παλάμης"
+      },
+      "header": {
+        "title": "Ανεβάστε τη φωτογραφία σας για γρήγορη ανάγνωση",
+        "subtitle": "Διπλασιάστε την απόλαυση του καφέ σας"
       }
   }
   
