--- a/src/locales/ar.json
+++ b/src/locales/ar.json
@@ -212,6 +212,13 @@
       "header": {
         "title": "قم بتحميل صورتك لقراءة سريعة",
         "subtitle": "ضاعف متعة القهوة الخاصة بك"
+      },
+      "section":{
+        "mainTitle":"وقت القهوة!",
+        "title1":"استراحة القهوة",
+        "p1":"خذ استراحة واستمتع بكوب من القهوة.",
+        "title2":"وقت الاسترخاء",
+        "p2":"استلقِ، استرخ وتذوق اللحظة مع كوب قهوة لذيذ."
       }
       
       
