--- a/src/locales/gr.json
+++ b/src/locales/gr.json
@@ -212,6 +212,13 @@
       "header": {
         "title": "Ανεβάστε τη φωτογραφία σας για γρήγορη ανάγνωση",
         "subtitle": "Διπλασιάστε την απόλαυση του καφέ σας"
+      },
+      "section":{
+        "mainTitle":"Ώρα για καφέ!",
+        "title1":"Διάλειμμα καφέ",
+        "p1":"Πάρτε ένα διάλειμμα και απολαύστε ένα φλιτζάνι καφέ.",
+        "title2":"Χρόνος χαλάρωσης",
+        "p2":"Καθίστε, χαλαρώστε και απολαύστε τη στιγμή με ένα νόστιμο καφέ."
       }
   }
   
