--- a/src/locales/tr.json
+++ b/src/locales/tr.json
@@ -214,6 +214,13 @@
       "header":{
         "title":"Fotoğrafınızı yükleyin falınıza hızlıca bakılsın",
         "subtitle":"Kahve keyfinizi katlayın"
+      },
+      "section":{
+        "mainTitle":"Kahve Zamanı!",
+        "title1":"Kahve Molası",
+        "p1":"Bir mola verin ve bir fincan kahvenin tadını çıkarın.",
+        "title2":"Rahatlama Zamanı",
+        "p2":"Geriye yaslanın, dinlenin ve lezzetli bir kahve ile anın tadını çıkarın."
       }
   }
   
