--- a/src/locales/ar.json
+++ b/src/locales/ar.json
@@ -219,6 +219,13 @@
         "p1":"خذ استراحة واستمتع بكوب من القهوة.",
         "title2":"وقت الاسترخاء",
         "p2":"استلقِ، استرخ وتذوق اللحظة مع كوب قهوة لذيذ."
+      },
+      "stats": {
+        "sectionTitle": "إحصائيات فالقيم",
+        "dailyUsers": "كل يوم، يستخدم 100000 شخص فالقيم",
+        "dailyUsersDesc": "استمتع بمتعة قراءة الطالع!",
+        "totalReadings": "قرأ فالقيم حتى الآن 3,423,456 فنجان قهوة",
+        "totalReadingsDesc": "نحن متخصصون في قراءة فنجان القهوة!"
       }
       
       
