--- a/src/locales/ar.json
+++ b/src/locales/ar.json
@@ -222,9 +222,9 @@
       },
       "stats": {
         "sectionTitle": "إحصائيات فالقيم",
-        "dailyUsers": "كل يوم، يستخدم 100000 شخص فالقيم",
+        "dailyUsers": "شخص يستخدم فالقيم",
         "dailyUsersDesc": "استمتع بمتعة قراءة الطالع!",
-        "totalReadings": "قرأ فالقيم حتى الآن 3,423,456 فنجان قهوة",
+        "totalReadings": "قراءة تمت",
         "totalReadingsDesc": "نحن متخصصون في قراءة فنجان القهوة!"
       }
       
