--- a/src/locales/gr.json
+++ b/src/locales/gr.json
@@ -220,12 +220,13 @@
         "title2":"Χρόνος χαλάρωσης",
         "p2":"Καθίστε, χαλαρώστε και απολαύστε τη στιγμή με ένα νόστιμο καφέ."
       },
-      "stats": {
-        "sectionTitle": "Στατιστικά Falcım",
-        "dailyUsers": "Κάθε μέρα, 100.000 άνθρωποι χρησιμοποιούν το Falcım",
-        "dailyUsersDesc": "Απολαύστε τη διασκέδαση της καφεμαντείας!",
-        "totalReadings": "Το Falcım έχει διαβάσει 3.423.456 καφέδες μέχρι τώρα",
-        "totalReadingsDesc": "Ειδικευόμαστε στην καφεμαντεία!"
-      }
+      
+  "stats": {
+    "sectionTitle": "Στατιστικά Falcım",
+    "dailyUsers": "άτομα χρησιμοποιούν το Falcım",
+    "dailyUsersDesc": "Απολαύστε τη διασκέδαση της καφεμαντείας!",
+    "totalReadings": "αναγνώσεις έχουν γίνει",
+    "totalReadingsDesc": "Ειδικευόμαστε στην καφεμαντεία!"
+  }
   }
   
