--- a/src/locales/ar.json
+++ b/src/locales/ar.json
@@ -22,7 +22,8 @@
         "terms": "شروط الاستخدام",
         "home": "الصفحة الرئيسية",
         "fortune": "قراءة الطالع",
-        "login": "تسجيل الدخول"
+        "login": "تسجيل الدخول",
+        "account":"حسابي"
       },
       "globalPresence": "فالسيم عالميًا",
       "socialMedia": "وسائل التواصل الاجتماعي",
