--- a/src/locales/gr.json
+++ b/src/locales/gr.json
@@ -22,7 +22,8 @@
         "terms": "Όροι Χρήσης",
         "home": "Αρχική",
         "fortune": "Μαντική Τέχνη",
-        "login": "Σύνδεση"
+        "login": "Σύνδεση",
+        "account":"Ο Λογαριασμός μου"
       },
       "globalPresence": "Παγκόσμια Παρουσία Φαλκίμ",
       "socialMedia": "Κοινωνικά Δίκτυα",
