--- a/src/locales/tr.json
+++ b/src/locales/tr.json
@@ -3,6 +3,9 @@
       "login": "Giriş Yap",
       "account": "Hesabım",
       "fortune": "Fal Bak",
+      "coffeeFortune": "Kahve Falı",
+      "palmFortune": "El Falı",
+      "tarotFortune": "Tarot Falı",
       "terms": "Kullanım Şartları",
       "help": "Yardım",
       "logout": "Çıkış Yap"
