--- a/src/locales/tr.json
+++ b/src/locales/tr.json
@@ -239,7 +239,9 @@
         "subtitle":"Başlamak için 3 kart seçin",
         "submitInitialCards":"Başla",
         "getFinalReading":"Gönder",
-        "predictionTitle":"Tarot Falınız"
+        "predictionTitle":"Tarot Falınız",
+        "shuffleCards":"Kartları Karıştır"
+
       }
   }
   
