--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -214,7 +214,9 @@
       },
       "fortuneTypes": {
         "coffee": "Coffee Fortune",
-        "palm": "Palm Reading"
+        "palm": "Palm Reading",
+        "taror":"Tarot Fortune"
+
       },
       "header": {
         "title": "Upload your photo for a quick reading",
