--- a/src/locales/tr.json
+++ b/src/locales/tr.json
@@ -215,7 +215,7 @@
       "fortuneTypes": {
         "coffee": "Kahve Falı",
         "palm": "El Falı",
-        "taror":"Tarot Falı"
+        "tarot":"Tarot Falı"
       },
       "header":{
         "title":"Fotoğrafınızı yükleyin falınıza hızlıca bakılsın",
