--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -25,7 +25,8 @@
           "terms": "Terms of Use",
           "home":"Home",
           "fortune":"Fortune Telling",
-          "login":"Log In"
+          "login":"Log In",
+          "account":"My Account"
         },
         "globalPresence": "Falcım Worldwide",
         "socialMedia": "Social Media",
